--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.5",
+    "chart.js": "^4.4.4",
     "pinia": "^2.2.2",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.5",
     "tailwindcss-primeui": "^0.3.4",
