--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.0.5",
     "tailwindcss-primeui": "^0.3.4",
+    "three": "^0.168.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
   },
