--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.5",
+    "@tweenjs/tween.js": "^25.0.0",
     "chart.js": "^4.4.4",
     "pinia": "^2.2.2",
     "primeflex": "^3.3.1",
@@ -17,6 +18,7 @@
     "primevue": "^4.0.5",
     "tailwindcss-primeui": "^0.3.4",
     "three": "^0.168.0",
+    "three-tween": "^1.0.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
   },
