--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/themes": "^4.0.5",
     "@tweenjs/tween.js": "^25.0.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "pinia": "^2.2.2",
     "primeflex": "^3.3.1",
