--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.5",
+    "quill": "^2.0.2",
     "tailwindcss-primeui": "^0.3.4",
     "three": "^0.168.0",
     "three-tween": "^1.0.0",
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.3"
+    "vite": "^5.4.3",
+    "vitest": "^2.1.3"
   }
 }
